<resources>
    <string name="app_name">Paintionary</string>
    <string name="playerNameHint">Name</string>
    <string name="serverIPHint">Server IP</string>
    <string name="buttonTextConnect">Connect</string>
    <string name="clear">Clear</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="brush_width">Brush Width</string>
    <string name="small_brush_selected">Small brush</string>
    <string name="medium_brush_unselected">Medium brush</string>
    <string name="large_brush_unselected">Large brush</string>
    <string name="delete">Delete</string>
    <string name="delete_button_for_paintview">Delete button for paintview</string>
    <string name="undo_button_for_paintview">Undo button for paintview</string>
    <string name="set_brush_red">Set brush color to red</string>
    <string name="set_brush_orange">Set brush color to orange</string>
    <string name="set_brush_yellow">Set brush color to yellow</string>
    <string name="set_brush_green">Set brush color to green</string>
    <string name="set_brush_blue">Set brush color to blue</string>
    <string name="set_brush_purple">Set brush color to purple</string>
    <string name="set_brush_black">Set brush color to black</string>
    <string name="set_brush_eraser">Set brush to eraser</string>
    <string name="done_button">Done button</string>
    <string name="lobby">Lobby</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="waiting_players">Waiting for the players to finish drawing</string>
    <string name="draw_subject">Drawing subject</string>
    <string name="send">Send</string>
    <string name="set_brush_white">Set brush color to white</string>
    <string name="set_brush_brown">Set brush color to brown</string>
    <string name="set_brush_gray">Set brush color to gray</string>
    <string name="set_brush_pink">Set brush color to pink</string>
    <string name="choose_winner">Choose winner</string>
    <string name="randomize_subject">Randomize Subject</string>
</resources>
